decoupling UI app server from core data grid services